<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- Jogo -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/clique_jogar_dado"
        android:textSize="18sp" />

    <Button
        android:id="@+id/jogarDadoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jogar" />

    <ImageView
        android:id="@+id/resultadoImageView"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:contentDescription="@string/resultado"
        app:srcCompat="@android:color/background_dark" />

    <ImageView
        android:id="@+id/resultado2ImageView"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:contentDescription="@string/resultado"
        android:visibility="gone"
        app:srcCompat="@android:color/background_dark" />
</LinearLayout>