<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="#FFFAFA"
    android:orientation="vertical">
    <!-- Jogo -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/clique_jogar_dado"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/jogarDadoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:onClick="jogarDado"
        android:text="@string/jogar"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ainda_nao_foi_lancado"
        android:textSize="18sp" />
</LinearLayout>