<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:background="#FFFAFA"
    tools:context=".ConfigActivity">
    <!-- Configuração -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/selecione_dados"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/numDicesSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:entries="@array/numero_dados" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/numero_faces"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/numFacesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#FFFAFA"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelarBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/salvar" />
    </LinearLayout>
</LinearLayout>